<resources>
    <string name="app_name">OddJobs</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main" />


    <!-- Button Titles -->
    <string name="fastmap">fast map</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="neighbors">Neighbors</string>
    <string name="my_jobs">My Jobs</string>
    <string name="accept">Accept</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="find_jobs">Find</string>
    <string name="create_job">Create</string>
    <string name="log_in">Log In</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="privacy_safety">Privacy and Safety</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="sign_out">Sign Out</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="oddjobs">OddJobs!</string>
    <string name="here_to_lend_a_hand_however_you_can">Here to lend a hand however you can</string>
    <string name="password">Password</string>
    <string name="email_username">Email/Username</string>
    <string name="invalid_username_password">Invalid Username/Password</string>
    <string name="ready_to_help_a_neighbor_near_you">Ready to help a neighbor near you?</string>
    <string name="job_title">Job Title</string>
    <string name="enter_job_name">Enter Job Name</string>
    <string name="select_category">Select Category</string>
    <string name="add_tags">Add Tags</string>
    <string name="add_description">Add Description</string>
    <string name="add_reward">Add Reward</string>
    <string name="create">Create With Current Location</string>
    <string name="job_requirements">Job Requirements</string>
    <string name="job_description">Job Description</string>
    <string name="done">Done</string>
    <string name="leaveJob">Leave Job</string>
    <string name="acceptJob">Accept Job</string>
    <string name="deleteJob">Delete Job</string>

    <string name="zipcode">Zipcode</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street_address">Entire Address</string>
    <string name="create_using_input_address">Create With Address</string>

    <string name="navigationMap">Map</string>
    <string name="navigationSearch">Search</string>
    <string name="navigationJobs">My Jobs</string>
    <string name="navigationProfile">Profile</string>

    <string name="looking_for_workers">Job Status: Looking for Workers</string>
    <string name="job_in_progress">Job Status: In Progress</string>
    <string name="job_completed">Job Status: Completed</string>
    <string name="title_activity_my_jobs">my_jobs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="found_jobs_temp">Found Jobs: Loading jobs...</string>
    <string name="found_jobs">Found Jobs: </string>

</resources>
