<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="2pt"
    android:layout_weight="1"
    >
    <EditText
        android:id="@+id/jobname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_job_name"
        android:layout_weight=".1"
        />
    <Spinner
        android:id="@+id/categoryS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown">
    </Spinner>

    <EditText
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_tags"
        android:layout_weight=".1"

        />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_description"
        android:layout_weight=".1"

        />

    <EditText
        android:id="@+id/reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_reward"
        android:layout_weight=".1"

        />
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street_address"
        android:layout_weight=".1"

        />


    <DatePicker
        android:id="@+id/jobDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_weight="3"
        android:layout_gravity="center"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        >
    <Button
        android:id="@+id/acceptbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create"
        android:layout_gravity="bottom"
        android:layout_weight=".2"
        android:layout_margin="5px"
        />
    <Button
        android:id="@+id/acceptbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_using_input_address"
        android:layout_gravity="bottom"
        android:layout_weight=".2"
        android:layout_margin="5px"
        />

    </LinearLayout>

</LinearLayout>